--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "@types/geojson": "^7946.0.8",
+    "@types/leaflet": "^1.7.5",
     "core-js": "^3.6.5",
+    "install": "^0.13.0",
     "leaflet": "^1.7.1",
+    "npm": "^8.1.0",
     "vue": "^2.6.11",
     "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "^4.5.14",
     "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -30,10 +39,11 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {}
   },
