--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@mdi/font": "^6.4.95",
+    "@mdi/js": "^6.4.95",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
